# IdentifyBlogger

./: README.md  preprocess_data.ipynb  pyproject.toml  requirements.txt
IdentifyBlogger/: BloggerDataset.py  IdentityLSTM.py  PhraseEncoder.py  evaluate.py  metrics.py  prepare_data.py  preprocess_targets.py  train.py  train_loop.py  utils.py
IdentifyBlogger/data/: BloggerDataset.py  PhraseEncoder.py  prepare_data.py
IdentifyBlogger/neural/: IdentityLSTM.py  metrics.py  train_loop.py
utils/: age_scaling_params.json  category_map.json  data_split.json  vocabulary.json
