[tool.poetry]
name = "identifyblogger"
version = "0.1.0"
description = ""
authors = ["p.t.rudzki <p.t.rudzki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.4"
spacy = "^2.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
